fix(#31666): Fix scroll brief display while dragging cards
As demonstrated in https://github.com/go-gitea/gitea/pull/31726#issuecomment-2256579220, an horizontal scrollbar can appears while dragging a card to a column from the right side, as the ghost card is animated to fit in. Force hidding the scrollbars using overflow:clip.

--- a/web_src/css/features/projects.css
+++ b/web_src/css/features/projects.css
@@ -50,7 +50,7 @@
   padding: 0 !important;
   flex-wrap: nowrap !important;
   flex-direction: column;
-  overflow-x: auto;
+  overflow-x: clip;
   gap: .25rem;
 }
 
